--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "vee-validate": "^4.5.7",
     "vue": "^3.0.0"
   },
   "devDependencies": {
